--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ input,
 }
 
 .logo {
-  max-width: 56px;
+  width: 56px;
 }
 
 .main-heading {
@@ -60,7 +60,7 @@ input {
 }
 
 input:user-invalid {
-  border: 1px solid red;
+  border: 1px solid hsl(354, 100%, 66%);
 }
 
 ::placeholder {
@@ -75,7 +75,8 @@ input:user-invalid {
   padding: 1em 0;
   margin: 1em 0 5em;
   color: white;
-  letter-spacing: 0.5px;
+  letter-spacing: 1px;
+  font-weight: 600;
 }
 
 .dashboard {
@@ -100,4 +101,53 @@ input:user-invalid {
 }
 .attribution a {
   color: hsl(228, 45%, 44%);
+}
+
+@media (min-width: 750px) {
+  .logo {
+    width: initial;
+  }
+
+  .main-heading {
+    font-size: 2.4rem;
+    margin-bottom: 0;
+  }
+
+  .sub-heading {
+    font-size: 1rem;
+    margin: 1em auto 2em auto;
+  }
+
+  input {
+    display: inline-block;
+    width: 27%;
+    margin-right: 1em;
+    padding: 1.5em 2.5em;
+    min-width: 350px;
+  }
+
+  .submit-btn {
+    width: 10%;
+    display: inline-block;
+    padding: 1.5em 0;
+    min-width: 200px;
+  }
+
+  input,
+  .submit-btn {
+    font-size: 0.8rem;
+  }
+
+  .dashboard {
+    max-width: 640px;
+  }
+
+  .social-links {
+    margin-top: 2em;
+  }
+
+  .copyright {
+    font-size: 0.6rem;
+    margin: 2em auto;
+  }
 }
